# UniVI

./: .gitignore  README.md  _MMVAE.py  _VAE.py  __init__.py  _objectives.py  _settings.py  code_LAGER_calAlign.R  pyproject.toml
UniVI/: _MMVAE.py  _VAE.py  _objectives.py
conda.recipe/: meta.yaml
data/: README.md
datasets/: _anndata.py  _datasets.py  _external.py
envs/: UniVI_working_environment_v2.yml  UniVI_working_environment_v2_full.yml  UniVI_working_environment_v2_minimal.yml  univi_env.yml  univi_v0.4.7_env.yml
models/: ._mmvae.py.swo  _mmvae.py  _utils.py  _vae.py  _vae_separate_encoder.py  base.py
notebooks/: UniVI_CITE-seq_benchmarking_notebook.ipynb  UniVI_CITE-seq_demo-bipartite_matching_test.ipynb  UniVI_CITE-seq_demo-forced_disjoint_unimodal_pairing_training_test.ipynb  UniVI_CITE-seq_demo-new_code_test-added_hyperparameter_optimization.ipynb  UniVI_CITE-seq_demo-new_code_test.ipynb  UniVI_CITE-seq_demo.ipynb  UniVI_TEA-seq_tri-modal_integration_demo-added_hyperparameter_optimization.ipynb  UniVI_TEA-seq_tri-modal_integration_demo-all_cells.ipynb  UniVI_TEA-seq_tri-modal_integration_demo.ipynb  UniVI_manuscript_GR-Figure_10__cell_population_ablation_MoE_reference.ipynb  UniVI_manuscript_GR-Figure_7_analysis-reference.ipynb  UniVI_manuscript_GR-Figure_8__benchmarking_against_pytorch_tools-reference.ipynb  UniVI_manuscript_GR-Figure_8_analysis-running_R_tools-reference.ipynb  UniVI_manuscript_GR-Figure__2__CITE_paired.ipynb  UniVI_manuscript_GR-Figure__5__Multiome_bridge-reference.ipynb  UniVI_manuscript_GR-Supplement_grid-sweep_reference.ipynb  (+3 more)
(+104 files in other folders)
